--- a/animacao-css/index.html
+++ b/animacao-css/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <button id="ativar">Ativar</button>
+    <div id="modal" class="animar">
+        <h1>Login</h1>
+        <label>Nome</label>
+        <input type="text">
+        <label >Email</label>
+        <input type="text">
+        <button>Logar</button>
+    </div>
+    <div id="load"></div>
 </body>
 </html>
