adicionando js e animações

--- a/animacao-css/index.html
+++ b/animacao-css/index.html
@@ -16,8 +16,9 @@
         <input type="text">
         <label >Email</label>
         <input type="text">
-        <button>Logar</button>
+        <button id="logar">Logar</button>
     </div>
     <div id="load"></div>
+    <script src="script.js"></script>
 </body>
 </html>
