--- a/animacao-css/index.html
+++ b/animacao-css/index.html
@@ -18,7 +18,7 @@
         <input type="text">
         <button id="logar">Logar</button>
     </div>
-    <div id="load"></div>
+    <div class="load"></div>
     <script src="script.js"></script>
 </body>
 </html>
